--- a/interview-2/main.css
+++ b/interview-2/main.css
@@ -164,6 +164,18 @@ body {
 }
 
 
+.end{
+	display: flex;
+	width: 100vw;
+	height: 20vh;
+}
+
+	.paris{
+		height: 10vh;
+	}
+	.clouds{
+		height: 10vh;
+	}
 
 
 
