--- a/quarantine-diaries/main.css
+++ b/quarantine-diaries/main.css
@@ -14,6 +14,57 @@ a:hover{
 	color: whitesmoke;
 }
 
+.keep{
+	width: 100vw;
+	height: 100vh;
+}
+
+.header{
+	display: flex;
+	margin: 45px;
+	width: 100vw;
+	height: 10vh;
+}
+
+	.about{
+		display: flex;
+		width: 33%;
+		justify-content: left;
+		font-family: gopher,sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		font-size: 18px;
+		color: whitesmoke;
+		color: #dc5ca2;
+	}
+
+	.home{
+		display: flex;
+		width: 33%;
+		justify-content: center;
+		text-align: center;
+		font-family: gopher,sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		font-size: 18px;
+		color: #dc5ca2;	
+	}
+	
+	.read{
+		display: flex;
+		width: 33%;
+		justify-content: right;
+		text-align: right;
+		font-family: gopher,sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		font-size: 18px;
+		color: #dc5ca2;
+	}
+
+
+
+
 .main {
 	display: flex;
 	height: 100vh;
@@ -72,4 +123,79 @@ a:hover{
 	50% {background-color: #eddfbe;}
 	100% {background-color: #efe8d3;}
 }
+
+.house-bg{
+	margin-top: 40vh;
+	width: 100vw;
+}
+
+	.day{
+		position: absolute;
+		margin-bottom: 250px;
+		margin-right: 850px;
+		font-family: gopher,sans-serif;
+		font-weight: 700;
+		font-style: normal;
+		font-size: 150px;
+		color: #c0822b;
+		transform: rotate(339deg);
+	}
+
+	.one {
+		position:absolute;
+		margin-bottom: 250px;
+		margin-left: 850px;
+		font-family: gopher,sans-serif;
+		font-weight: 700;
+		font-style: normal;
+		font-size: 150px;
+		color: #c0822b;
+		transform: rotate(21deg);
+	}
+
+.green{
+	display: flex;
+	background-color: #303d21;
+	width: 100vw;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+}
+	.text{
+		text-align: center;
+		display: flex;
+		margin: 300px;
+		font-family: gopher,sans-serif;
+		font-weight: 700;
+		font-style: normal;
+		font-size: 50px;
+		color: white;
+
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
