--- a/coding-from-life/sketch-1/main.css
+++ b/coding-from-life/sketch-1/main.css
@@ -13,7 +13,7 @@ body {
   width: 1000px;
   height: 600px;
   background: white;
-  margin: 30px auto;
+  margin: 30px aut;
   position: relative;
   z-index: -3;
 }
