--- a/quarantine-diaries/main.css
+++ b/quarantine-diaries/main.css
@@ -10,60 +10,18 @@ a{
 	text-decoration: none;
 }
 
+
 a:hover{
 	color: whitesmoke;
 }
 
-.keep{
-	width: 100vw;
-	height: 100vh;
+.construction{
+	font-family: gopher,sans-serif;
+	font-weight: 700;
+	font-style: normal;
+	font-size: 38px;
+
 }
-
-.header{
-	display: flex;
-	margin: 45px;
-	width: 100vw;
-	height: 10vh;
-}
-
-	.about{
-		display: flex;
-		width: 33%;
-		justify-content: left;
-		font-family: gopher,sans-serif;
-		font-weight: 400;
-		font-style: normal;
-		font-size: 18px;
-		color: whitesmoke;
-		color: #dc5ca2;
-	}
-
-	.home{
-		display: flex;
-		width: 33%;
-		justify-content: center;
-		text-align: center;
-		font-family: gopher,sans-serif;
-		font-weight: 400;
-		font-style: normal;
-		font-size: 18px;
-		color: #dc5ca2;	
-	}
-	
-	.read{
-		display: flex;
-		width: 33%;
-		justify-content: right;
-		text-align: right;
-		font-family: gopher,sans-serif;
-		font-weight: 400;
-		font-style: normal;
-		font-size: 18px;
-		color: #dc5ca2;
-	}
-
-
-
 
 .main {
 	display: flex;
@@ -124,6 +82,49 @@ a:hover{
 	100% {background-color: #efe8d3;}
 }
 
+.grass{
+	position: absolute;
+	margin-top: 700px;
+	width: 100vw;
+	height: 30vh;
+	background-color: #c6b999;
+	z-index: -1;
+}
+
+.sign{
+	display: flex;
+	position: absolute;
+	margin-top: 600px;
+	margin-right: 1200px;
+	height: 200px;
+	z-index: 1;
+}
+
+	.sign-text{
+		position: absolute;
+		margin-top: 20px;
+		margin-left: 7px;
+		text-align: center;
+		font-family: gopher,sans-serif;
+		font-weight: 700;
+		font-style: normal;
+		font-size: 14px;
+		animation: sign-text 1.5s infinite;
+	}
+
+	.sign-text:hover{
+		animation-play-state: paused;
+		cursor: pointer;
+	}
+
+	@keyframes sign-text{
+		0%{color: black;}
+		50%{color: #f6ba2e;}
+		100%{color: black;}
+	}
+
+
+
 .house-bg{
 	margin-top: 40vh;
 	width: 100vw;
@@ -155,6 +156,7 @@ a:hover{
 
 .green{
 	display: flex;
+	flex-direction: column;
 	background-color: #303d21;
 	width: 100vw;
 	height: 100vh;
@@ -164,7 +166,8 @@ a:hover{
 	.text{
 		text-align: center;
 		display: flex;
-		margin: 300px;
+		margin-right: 300px;
+		margin-left: 300px;
 		font-family: gopher,sans-serif;
 		font-weight: 700;
 		font-style: normal;
@@ -173,6 +176,24 @@ a:hover{
 
 	}
 
+	.next-box{
+		justify-content: center;
+		align-items: center;
+		margin-top: 100px;
+		margin-bottom: 100px;
+		width: 70px;
+		height: 40px;
+		border-radius: 20px;
+		display: flex;
+		background-color: #c0822b;
+
+	}
+		.next{
+			font-family: gopher,sans-serif;
+			font-weight: 400;
+			font-style: normal;
+			font-size: 20px;
+		}
 
 
 
