--- a/quarantine-diaries/main.css
+++ b/quarantine-diaries/main.css
@@ -45,7 +45,6 @@ a:hover{
 
 .clouds{
 	display: flex;
-	flex-direction: row;
 	margin-top:200px;
 	margin-left:190px;
 	position: absolute;
@@ -61,11 +60,9 @@ a:hover{
 	}
 
 .clouds-2{
-	margin-top:120px;
-	margin-left: 2000px;
+	margin-left: 1000px;
+	margin-bottom: 400px;
 	position: absolute;
-	height: 100vh;
-	width: 100vw;
 	z-index: -1;
 	animation: move 5s infinite;
 }
@@ -198,7 +195,7 @@ a:hover{
 
 
 
-@media screen and (max-width: 736px) and (min-device-width: 414px){
+@media screen and (max-width: 536px) and (min-device-width: 414px){
 	.house-home{
 		height: 250px;
 		margin-top: 300px;
