--- a/party-erin-23rd-birthday/styles.css
+++ b/party-erin-23rd-birthday/styles.css
@@ -1,10 +1,10 @@
 body {
     cursor: none;
-    background-color: #fefce4;
+    background-color:#ea5a39;
 }
 
 .container {
-    color: #ea5a39;
+    color: #fefce4;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,10 +39,12 @@ body {
 .rsvp{
     display: flex;
     margin-top: 25%;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "bely", serif;
+    font-weight: 400;
+    font-style: italic;
     font-size: 20px;
-    background-color: #ea5a39; /* Fill color of the rectangle */
-    color: #fefce4; /* Text color */
+    background-color: #fefce4 ; /* Fill color of the rectangle */
+    color: #ea5a39; /* Text color */
     padding: 5px 30px; /* Adjust padding to your preference */
     border-radius: 25px; /* Adjust border radius for rounded corners */
     display: inline-block; /* Ensures the background covers the text */
