--- a/party-erin-23rd-birthday/styles.css
+++ b/party-erin-23rd-birthday/styles.css
@@ -19,7 +19,7 @@ body {
     font-family: "sloop-script-two", sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 100px;
+    font-size: 90px;
 }
 
 #cake{
@@ -56,11 +56,9 @@ body {
     pointer-events: none;
 }
 
-@media only screen 
-  and (max-device-width: 896px) 
-  and (-webkit-device-pixel-ratio: 2) {
+@media (max-device-width: 390px) {
     .header {
-        font-size: 40px;
+        font-size: 45px;
     }
     #cake{
         width: 150px;
